# boardroom

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
evals/: harness.py  report.py  test_evals.py
evals/fixtures/: generate.py  sample_ohlcv.csv
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  sampleResult.ts  types.ts
frontend/src/components/: Brief.tsx  DebateView.tsx  InvestorCard.tsx  Loading.tsx  Risk.tsx  SearchBar.tsx  Verdict.tsx  primitives.tsx
frontend/src/components/debate/: Brief.tsx  DebateView.tsx  InvestorCard.tsx  Risk.tsx  TraderCard.tsx  VerdictHero.tsx
frontend/src/components/ui/: primitives.tsx
frontend/src/hooks/: useDebate.ts
frontend/src/lib/: ui.ts
server/: manage.py
server/api/: urls.py  views.py
server/boardroom_api/: asgi.py  settings.py  urls.py  wsgi.py
src/boardroom/: __init__.py  backtest.py  boardroom.py  cli.py  config.py  engine.py  mcp_server.py  runner.py
src/boardroom/agents/: __init__.py  base.py  firm.py  investors.py
src/boardroom/data/: __init__.py  indicators.py  market.py
src/boardroom/llm/: __init__.py  client.py  mock.py  offline.py  pricing.py  schema.py  usage.py
tests/: conftest.py  test_backtest.py  test_boardroom.py  test_client.py  test_indicators.py
