[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boardroom"
version = "0.1.0"
description = "A panel of AI investor personas that debate a stock and reach a verdict."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Karan Singh" }]
keywords = ["agents", "llm", "investing", "multi-agent", "mcp"]
dependencies = [
    "anthropic>=0.39",
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.24",
    "rich>=13.0",
    "typer>=0.12",
    "pydantic>=2.6",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]
web = ["django>=5.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
boardroom = "boardroom.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "evals"]
filterwarnings = ["ignore::DeprecationWarning"]
