[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boardroom"
version = "0.1.0"
description = "A panel of AI investor personas that debate a stock and reach a verdict."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Karan Singh" }]
keywords = ["agents", "llm", "investing", "multi-agent", "mcp"]
dependencies = [
    "anthropic>=0.39",
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.24",
    "rich>=13.0",
    "typer>=0.12",
    "pydantic>=2.6",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]
web = ["django>=5.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
boardroom = "boardroom.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
boardroom = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "evals"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "evals", "server"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",   # line length is handled by the formatter
    "B008",   # function calls in argument defaults (Typer/Field use this idiom)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.10"
files = ["src/boardroom"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
# Pragmatic: the engine is fully typed, but we do not force annotations on every
# local in the offline heuristics or the third-party-heavy data layer.
check_untyped_defs = false
